minor changes setErr in auth now uses string disk overflow fixed logo.svg paths changed next svgs are gone

--- a/app/(default)/page.css
+++ b/app/(default)/page.css
@@ -21,6 +21,7 @@
 
 .dashboard-disks {
 	display: flex;
+	height: 90vh;
 	flex-direction: column;
 	background-color: #262B49;
 }
@@ -36,6 +37,7 @@
 	.dashboard-disks {
 		grid-column: span 2;
 		flex-direction: row;
+		height: 60vh;
 	}
 }
 
